# PlataformaDAYC

./: .gitignore  AGENTS.md  MiniJuegos.md  baremos.py  planDeCorreccion.md  planNuevo.md  skills-lock.json  start.sh
backend/: docker-compose.yml  manage.py  pyproject.toml  requirements.txt
backend/.sonar/: report-task.txt
backend/data/: preguntas_dayc.json
backend/src/api/: auth.py  auth_urls.py  exceptions.py
backend/src/api/children/: __init__.py  apps.py  models.py  urls.py  views.py
backend/src/api/children/migrations/: 0001_initial.py  0002_niño_escuela_niño_genero_niño_nombre_informante_and_more.py  0003_niño_psychologist.py
backend/src/api/consumers/: evaluation_consumer.py
backend/src/api/diagnostico/: __init__.py  apps.py  urls.py  views.py
backend/src/api/evaluaciones/: __init__.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/src/api/evaluaciones/migrations/: 0001_initial.py  (+3 more)
backend/src/api/metricas/: __init__.py  apps.py  urls.py  views.py
backend/src/api/reportes/: __init__.py  apps.py  urls.py  views.py
backend/src/application/services/: baremos_service.py  dayc2_flow_service.py  diagnosis_prompt.py  edad_service.py  item_catalog_service.py  rules_service.py  scoring_service.py
backend/src/dayc2/: __init__.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
backend/src/infrastructure/pdf/: reporte_generator.py
backend/tests/: conftest.py  test_baremos_service.py  test_rules_service.py
backend/tests/unit/: __init__.py  test_baremos_canonical_logic.py  test_baremos_service.py  test_rules_service.py
(+180 files in other folders)
