[project]
name = "dayc2-backend"
version = "0.1.0"
description = "DAYC-2 Automated Evaluation Platform Backend"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "gunicorn>=21.0",
    "django-cors-headers>=4.0",
    "channels>=4.0",
    "weasyprint>=60.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "black>=23.0",
    "flake8>=6.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"